[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ships/NPC/NPC.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemies/enemyGreen1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Effects/fire11.png" type="Texture" id=3]
[ext_resource path="res://Ships/NPC/GreenEnemy.gd" type="Script" id=4]
[ext_resource path="res://Hit Hurt Boxes/HurtBox.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="GreenEnemy" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 10
script = ExtResource( 4 )

[node name="Ship" parent="." index="0"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Engine" parent="." index="2"]
visible = true
position = Vector2( 0, -28 )
texture = ExtResource( 3 )

[node name="LaserTimer" type="Timer" parent="." index="3"]
wait_time = 2.0
autostart = true

[node name="MovementTimer" type="Timer" parent="." index="4"]
autostart = true

[node name="HurtBox" parent="." index="5" instance=ExtResource( 5 )]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
